---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2022-05-?
  Changes:
      - Creep miners range circle render improved: miners ghosts ranges are shown, creep meter in hands unhides this rendering too.
      - Creep miner has got a limit of tiles excavation queue in standby reserve.
      - Updated counter-strike's one-time damage.
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2022-04-02
  Changes:
      - Mod settings were added.
      Biters reseach data (BRD) recipe biomass ingredient by default is 7. Use value 4 for double technology price or when playing less aggressive enemies worlds.
      To change BRD startup setting Factorio app restart is required. Old games will use it at next load of saved game.
      - CLI mod settings are removed. Loading old game imports them into mod settings UI.
      - Creep miner goes to sleep immediately on last creep tile harvested.
      - Corrosion marginal case fix.
      - +0.5% corrosion DoT.
      - Less painful corrosion strikes: less damage, less often.
      - Fixed circle rendering radius for creep miners.
      - Poison capsule, repair capsule (RA mod) and advanced repair pack (RI mod) biomass costs were halved - these recipes produce 2 resulting items now.
      - Biomass costs for some of RA and RI mods structures and equipment were decreased to be multiple of 15.
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 2022-02-06
  Changes:
      - Balance: Electric creep miner. Added small pollution (0.5 per minute).
      - Fixed creep friction abnormal coefficient: vehicles bog down when entering creep, then get +1000% speed until driving out creep area.
      Considering other mod development to make Rampant Arsenal tanks stronger than armor mk3+shotgun vs high tier enemy bases.