@@ -3,7 +3,7 @@ disable-corrosion=- Disables acid DoT for turrets placed on creep.
 enable-corrosion=- Enables acid DoT for turrets placed on creep.
 
 [controls]
-kr-creep-collector=Get portable Creepmeter
+kr-creep-collector=Creepmeter
 
 [controls-description]
 kr-inserter-change-lane=Use this command on an inserter to toggle between dropping on the far lane and near lane of a belt.
@@ -46,9 +46,9 @@ corrosion-strikes-disabled=Biters retaliation strikes are disabled !
 corrosion-strikes-enabled=Biters retaliation strikes are enabled !
 creepminer-hints-disabled=Flying hints for not working creep miners are disabled !
 creepminer-hints-enabled=Flying hints for not working creep miners are enabled !
-wm-true-creep-protected=Creep miner is blocked by enemies to collect biomass creep
+wm-true-creep-protected=Creep miner is blocked by enemies to collect only BIOMASS creep
 wm-no-storage-for-true-creep=No chest found to store biomass of excavated biter creep
-wm-all-creep-protected=All reachable creep is protected by enemies
+wm-all-creep-protected=All reachable (even without biomass) creep is protected by enemies
 
 [other]
 kr-something-went-wrong=Something went wrong.
