@@ -90,7 +90,8 @@ function corrosion.affecting()
  for _, entity in pairs(global.corrosion.affected) do
   if entity.valid then
     local surface = entity.surface
-    local dmg = math.floor( entity.health * ( 0.045 + game.forces.enemy.evolution_factor/16 ) )  -- at least 5 health will be left for biters/worms to finish
+    local h_ratio = entity.get_health_ratio() / 2
+    local dmg = math.floor( entity.health * ( 0.045 + game.forces.enemy.evolution_factor/15 ) * ( 1 - h_ratio ) )  -- at least 5 health will be left for biters/worms to finish
     local recieved_dmg = entity.damage(dmg, "enemy", "acid")
     if recieved_dmg > 0 then
       surface.play_sound{path = "acid_burns", position = entity.position}
