@@ -4,7 +4,9 @@ Date: 2022-05-?
   Changes:
       - Creep miners range circle render improved: miners ghosts ranges are shown, creep meter in hands unhides this rendering too.
       - Creep miner has got a limit of tiles excavation queue in standby reserve.
+      - Creep miner balance. Reduced enemies protection for biomass creep (biters don't protect it anymore, miner blocking range is 1.5 chunk)
       - Updated counter-strike's one-time damage.
+      - Decreased DoT corrosion damage for less damaged buildings.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.8
 Date: 2022-04-02
